--- a/_posts/2024-04-23-morning.md
+++ b/_posts/2024-04-23-morning.md
@@ -10,4 +10,4 @@ title: April 23rd Morning Devotional
 
 Psalm 23:5
 
-You prepare a table before me in the presence of my enemies. You annoint my head with oil; my cup overflows.
+You prepare a table before me in the presence of my enemies. You anoint my head with oil; my cup overflows.
