--- a/_posts/2024-04-24-evening.md
+++ b/_posts/2024-04-24-evening.md
@@ -3,10 +3,10 @@ layout: post
 author: Joey
 date: 2024-04-24 17:19:46 -0500
 featured_image: "/img/042424_daily_devotional_night.png"
-title: April 24th Morning Devotional
+title: April 24th Evening Devotional
 ---
 
-[![April 24th 2024 - Morning Devotional](/img/042424_daily_devotional_night.png)](/img/042424_daily_devotional_night.png)
+[![April 24th 2024 - Evening Devotional](/img/042424_daily_devotional_night.png)](/img/042424_daily_devotional_night.png)
 
 Hebrews 10:23
 
