--- a/_posts/2024-04-26-evening.md
+++ b/_posts/2024-04-26-evening.md
@@ -3,10 +3,10 @@ layout: post
 author: Joey
 date: 2024-04-26 17:15:46 -0500
 featured_image: "/img/042624_daily_devotional_night.png"
-title: April 26th Night Devotional
+title: April 26th Evening Devotional
 ---
 
-[![April 26th 2024 - Night Devotional](/img/042624_daily_devotional_night.png)](/img/042624_daily_devotional_night.png)
+[![April 26th 2024 - Evening Devotional](/img/042624_daily_devotional_night.png)](/img/042624_daily_devotional_night.png)
 
 Jude 24
 
