--- a/_posts/2024-04-27-evening.md
+++ b/_posts/2024-04-27-evening.md
@@ -3,10 +3,10 @@ layout: post
 author: Joey
 date: 2024-04-27 17:14:12 -0500
 featured_image: "/img/042724_daily_devotional_night.png"
-title: April 27th Morning Devotional
+title: April 27th Evening Devotional
 ---
 
-[![April 27th 2024 - Morning Devotional](/img/042724_daily_devotional_night.png)](/img/042724_daily_devotional_night.png)
+[![April 27th 2024 - Evening Devotional](/img/042724_daily_devotional_night.png)](/img/042724_daily_devotional_night.png)
 
 Luke 18:27
 
