--- a/_posts/2024-04-29-evening.md
+++ b/_posts/2024-04-29-evening.md
@@ -7,3 +7,7 @@ title: April 29th Evening Devotional
 ---
 
 [![April 29th 2024 - Evening Devotional](/img/042924_daily_devotional_night.png)](/img/042924_daily_devotional_night.png)
+
+John 6:48
+
+I am the bread that gives life.
