--- a/_posts/2024-05-04-morning.md
+++ b/_posts/2024-05-04-morning.md
@@ -6,6 +6,8 @@ featured_image: "/img/050424_daily_devotional_morning.png"
 title: May 4th Morning Devotional
 ---
 
+[![May 4th 2024 - Morning Devotional](/img/050424_daily_devotional_morning.png)](/img/050424_daily_devotional_morning.png)
+
 Proverbs 14:10
 
 Each heart knows its own bitterness,
