Added verse to April 15th Daily Devotional

--- a/_posts/2024-04-15-evening.md
+++ b/_posts/2024-04-15-evening.md
@@ -6,4 +6,8 @@ featured_image: "/img/041524_daily_devotional_night.png"
 title: April 15th Evening Devotional
 ---
 
-[![April 15th 2024 - Evening Devotional](/img/041524_daily_devotional_night.png)](/img/041524_daily_devotional_night.png)
+[![April 15th 2024 - Evening Devotional](/img/041524_daily_devotional_night.png)](/img/041524_daily_devotional_night.pnge
+
+1 Peter 4:10-11
+
+Each of you has received a gift to use to serve others. Be good servants of God's various gifts of grace. Anyone who speaks should speak words from God. Anyone who serves should serve with the strength God gives so that in everything God will be praised through Jesus Christ. Power and glory belong to him forever and ever. Amen.
