--- a/_posts/2024-04-18-morning.md
+++ b/_posts/2024-04-18-morning.md
@@ -2,7 +2,7 @@
 layout: post
 author: Joey
 date: 2024-04-18 12:32:53 -0500
-featured_image: "/img/041824_daily_devotional_morning.png"
+featured_image: "/img/041824_daily_devotional_morning.webp"
 title: April 18th 2024 - Morning Devotional
 ---
 
