edits and added image

--- a/_posts/2024-06-05-morning.md
+++ b/_posts/2024-06-05-morning.md
@@ -6,6 +6,7 @@ featured_image: "/img/060524_daily_devotional_morning.webp"
 title: June 5th 2024 - Morning Devotional
 ---
 
-[![June 5th 2024 - Morning Devotional](/img/060424_daily_devotional_morning.webp)](/img/060424_daily_devotional_morning.webp)
+[![June 5th 2024 - Morning Devotional](/img/060524_daily_devotional_morning.webp)](/img/060524_daily_devotional_morning.webp)
 
+Psalm 37:4
 Delight yourself in the Lord, and he will give you the desires of your heart.
