--- a/_posts/2024-06-10-evening.md
+++ b/_posts/2024-06-10-evening.md
@@ -16,4 +16,4 @@ Greater love hath no man than this, that a man lay down his life for his friends
 
 Please consider purchasing a mug to support the page by clicking the image below, thank you!
 
-[![June 10th 2024 - Evening Devotional - Mug](/img/mugs/061024_night_mug.webp)]()
+[![June 10th 2024 - Evening Devotional - Mug](/img/mugs/061024_night_mug.webp)](https://www.joeybrinkman.com/product/12-oz-mug-john-1513/)
