--- a/_posts/2024-06-11-evening.md
+++ b/_posts/2024-06-11-evening.md
@@ -16,4 +16,4 @@ Thou wilt keep him in perfect peace, whose mind is stayed on thee: because he tr
 
 Please consider purchasing a mug to support the page by clicking the image below, thank you!
 
-[![June 11th 2024 - Evening Devotional - Mug](/img/mugs/061124_night_mug.webp)]()
+[![June 11th 2024 - Evening Devotional - Mug](/img/mugs/061124_night_mug.webp)](https://www.joeybrinkman.com/product/12-oz-mug-isaiah-263/)
