--- a/_posts/2024-06-12-evening.md
+++ b/_posts/2024-06-12-evening.md
@@ -16,4 +16,4 @@ Hast thou not known? hast thou not heard, that the everlasting God, the Lord, th
 
 Please consider purchasing a mug to support the page by clicking the image below, thank you!
 
-[![June 12th 2024 - Evening Devotional - Mug](/img/mugs/061124_night_mug.webp)](joeybrinkman.com/shop)
+[![June 12th 2024 - Evening Devotional - Mug](/img/mugs/061124_night_mug.webp)](https://www.joeybrinkman.com/shop)
