--- a/_posts/2024-06-12-morning.md
+++ b/_posts/2024-06-12-morning.md
@@ -17,4 +17,4 @@ Psalm 56:3
 
 Please consider purchasing a mug to support the page by clicking the image below, thank you!
 
-[![June 12th 2024 - Morning Devotional - Mug](/img/mugs/061224_morning_mug.webp)](https://www.joeybrinkman.com/product/12-oz-mug-romans-828/)
+[![June 12th 2024 - Morning Devotional - Mug](/img/mugs/061124_morning_mug.webp)](https://www.joeybrinkman.com/shop)
