--- a/_posts/2024-06-17-morning.md
+++ b/_posts/2024-06-17-morning.md
@@ -16,4 +16,4 @@ It is the glory of God to conceal a thing: but the honour of kings is to search 
 
 Please consider purchasing a mug to support the page by clicking the image below, thank you!
 
-[![June 17th 2024 - Morning Devotional - Mug](/img/mugs/061124_morning_mug.webp)](https://www.joeybrinkman.com/shop6)
+[![June 17th 2024 - Morning Devotional - Mug](/img/mugs/061124_morning_mug.webp)](https://www.joeybrinkman.com/shop)
