june 28th 2024 evening devotional

--- a/_posts/2024-06-28-evening.md
+++ b/_posts/2024-06-28-evening.md
@@ -12,7 +12,7 @@ title: June 28th 2024 - Evening Devotional
 
 2 Timothy 1:7
 
-For God hath not given us the spirit of fear; but of power, and of love, and of a sound mind
+For God hath not given us the spirit of fear; but of power, and of love, and of a sound mind.
 
 <!-- ad / promo -->
 <!-- <hr>
