--- a/_posts/2024-07-01-morning.md
+++ b/_posts/2024-07-01-morning.md
@@ -10,7 +10,7 @@ title: July 1st 2024 - Morning Devotional
 
 Psalm 7:1
 
-O Lord my God, in thee do I put my trust: save me from all them that persecute me, and deliver me:
+O Lord my God, in thee do I put my trust: save me from all them that persecute me, and deliver me:d
 
 
 
