--- a/_posts/2024-07-07-morning.md
+++ b/_posts/2024-07-07-morning.md
@@ -12,7 +12,9 @@ title: July 7th 2024 - Morning Devotional
 
 And whatsoever we ask, we receive of him, because we keep his commandments, and do those things that are pleasing in his sight.
 
+Proverbs 3:5-6
 
+Trust in the Lord with all thine heart; and lean not unto thine own understanding. In all thy ways acknowledge him, and he shall direct thy paths.
 
 <!-- <hr>
 
