--- a/_posts/2024-07-26-morning.md
+++ b/_posts/2024-07-26-morning.md
@@ -16,4 +16,4 @@ I will praise thee; for I am fearfully and wonderfully made: Marvellous are thy 
 
 Please consider purchasing a mug to support the page by clicking the image below, thank you!
 
-[![June 20th 2024 - Morning Devotional - Mug](/img/mugs/061124_morning_mug.webp)](https://www.joeybrinkman.com/shop) --6
+[![June 20th 2024 - Morning Devotional - Mug](/img/mugs/061124_morning_mug.webp)](https://www.joeybrinkman.com/shop) -->
