--- a/_posts/2024-07-31-evening.md
+++ b/_posts/2024-07-31-evening.md
@@ -2,18 +2,21 @@
 layout: post
 author: Joey
 date: 2024-07-31 14:21:00 -0500
-featured_image: "/img/073024_daily_devotional_night.webp"
-title: July 30th 2024 - Evening Devotional
+featured_image: "/img/073124_daily_devotional_night.webp"
+title: July 31st 2024 - Evening Devotional
 ---
 
-[![July 31th 2024 - Evening Devotional](/img/073124_daily_devotional_night.webp)](/img/073124_daily_devotional_night.webp)
+<!-- [![July 31st 2024 - Evening Devotional](/img/073124_daily_devotional_night.webp)](/img/073124_daily_devotional_night.webp)
+-->
+
+[![July 31st 2024 - Evening Devotional](/img/073124_daily_devotional_night.webp)](/img/073124_daily_devotional_night.webp)
 
 <!-- verse -->
-
+<br>
 2 Timothy 2:5
 
 And if a man also strive for masteries, yet is he not crowned, except he strive lawfully.
-
+<br><br>
 
 <!-- ad / promo -->
 <!-- <hr> 
